<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spDebCred"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/tipos"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTipo"
        app:layout_constraintEnd_toEndOf="@+id/spDetalhes"
        app:layout_constraintTop_toTopOf="@+id/txtTipo" />

    <TextView
        android:id="@+id/txtDetalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detalhe"
        app:layout_constraintStart_toStartOf="@+id/txtTipo"
        app:layout_constraintTop_toBottomOf="@+id/spDebCred" />

    <Spinner
        android:id="@+id/spDetalhes"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:entries="@arrays/cate"
        app:layout_constraintBottom_toBottomOf="@+id/txtDetalhe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDetalhe"
        app:layout_constraintTop_toBottomOf="@+id/spDebCred" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valor"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/txtDetalhe"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalhe" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/spDetalhes"
        app:layout_constraintTop_toBottomOf="@+id/spDetalhes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_o_valor"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtDatLanc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/txtValor"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_a_data_lancamento" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btLancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lancar"
        app:layout_constraintStart_toStartOf="@+id/txtDatLanc"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btLancamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lancamentos"
        app:layout_constraintStart_toEndOf="@+id/btLancar"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/saldo"
        app:layout_constraintStart_toEndOf="@+id/btLancamentos"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>